--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# Build directory
+build/
+
+# Test coverage
+coverage.txt
+profile.out
+
+# IntelliJ
+*.iml
+.idea
+
+.vscode/
