--- a/charts/generic/traefik/Chart.yaml
+++ b/charts/generic/traefik/Chart.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
-name: traefik
-version: 1.28.1
-appVersion: 1.5.4
+appVersion: 1.4.0
 description: A Traefik based Kubernetes ingress controller with Let's Encrypt support
+engine: gotpl
+home: http://traefik.io/
+icon: http://traefik.io/traefik.logo.png
 keywords:
 - traefik
 - ingress
 - acme
 - letsencrypt
-home: http://traefik.io/
+maintainers:
+- email: kent.rancourt@microsoft.com
+  name: Kent Rancourt
+name: traefik
 sources:
 - https://github.com/containous/traefik
 - https://github.com/krancour/charts/tree/master/traefik
-maintainers:
-- name: krancour
-  email: kent.rancourt@microsoft.com
-engine: gotpl
-icon: http://traefik.io/traefik.logo.png
+version: 1.12.0
