--- a/charts/generic/traefik/templates/configmap.yaml
+++ b/charts/generic/traefik/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
-    app: {{ template "traefik.name" . }}
+    app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -14,55 +14,34 @@ data:
     {{- if .Values.debug.enabled }}
     debug = true
     {{- end }}
-    {{- if .Values.sendAnonymousUsage }}
-    sendAnonymousUsage = true
-    {{- end }}
-    {{- if .Values.ssl.insecureSkipVerify }}
-    InsecureSkipVerify = true
-    {{- end }}
     {{- if .Values.ssl.enabled }}
     defaultEntryPoints = ["http","https"]
     {{- else }}
-    defaultEntryPoints = ["http", "httpn"]
+    defaultEntryPoints = ["http"]
     {{- end }}
     [entryPoints]
       [entryPoints.http]
       address = ":80"
-      {{- if .Values.whiteListSourceRange }}
-      {{ template "traefik.whiteListSourceRange" . }}
-      {{- end }}
-      {{- if .Values.proxyProtocol.enabled }}
-        [entryPoints.http.proxyProtocol]
-        {{ template "traefik.trustedips" . }}
-      {{- end }}
       compress = {{ .Values.gzip.enabled }}
-        {{- if .Values.ssl.enforced }}
+        {{- if and .Values.ssl.enabled .Values.ssl.enforced }}
         [entryPoints.http.redirect]
-          regex = "^http://(.*)"
-          replacement = "https://$1"
+          entryPoint = "https"
+        {{- end }}
+        {{- if .Values.entrypoint.auth }}
+        {{- if .Values.entrypoint.auth.basic }}
+        [entryPoints.http.auth]
+          [entryPoints.http.auth.basic]
+            users = [{{ range $key, $value := .Values.entrypoint.auth.basic }}"{{ $key }}:{{ $value }}",{{ end }}]
+        {{- end }}
         {{- end }}
       {{- if .Values.ssl.enabled }}
       [entryPoints.https]
-      {{- if .Values.whiteListSourceRange }}
-      {{ template "traefik.whiteListSourceRange" . }}
-      {{- end }}
       address = ":443"
-      {{- if .Values.proxyProtocol.enabled }}
-        [entryPoints.https.proxyProtocol]
-        {{ template "traefik.trustedips" . }}
-      {{- end }}
       compress = {{ .Values.gzip.enabled }}
         [entryPoints.https.tls]
           [[entryPoints.https.tls.certificates]]
           CertFile = "/ssl/tls.crt"
           KeyFile = "/ssl/tls.key"
-      {{- else }}
-      [entryPoints.httpn]
-      {{- if .Values.whiteListSourceRange }}
-      {{ template "traefik.whiteListSourceRange" . }}
-      {{- end }}
-      address = ":8880"
-      compress = {{ .Values.gzip.enabled }}
       {{- end }}
     [kubernetes]
     {{- if .Values.kubernetes}}
@@ -79,7 +58,7 @@ data:
       {{- end}}
     {{- end}}
     {{- if .Values.accessLogs.enabled }}
-    [accessLog]
+    [accessLogs]
     {{- if .Values.accessLogs.filePath }}
     filePath = "{{ .Values.accessLogs.filePath }}"
     {{- end}}
@@ -94,22 +73,10 @@ data:
     {{- if .Values.acme.staging }}
     caServer = "https://acme-staging.api.letsencrypt.org/directory"
     {{- end }}
-    {{- if .Values.acme.logging }}
-    acmeLogging = true
-    {{- end }}
-    {{- if eq .Values.acme.challengeType "dns-01" }}
-      [acme.dnsChallenge]
-      provider = "{{ .Values.acme.dnsProvider.name }}"
-    {{- else if eq .Values.acme.challengeType "http-01" }}
-      [acme.httpChallenge]
-      entryPoint = "http"
-    {{- end }}
-    {{- end }}
-    {{- if or .Values.dashboard.enabled .Values.metrics.prometheus.enabled .Values.metrics.statsd.enabled .Values.metrics.datadog.enabled }}
-    [web]
-    address = ":8080"
     {{- end }}
     {{- if .Values.dashboard.enabled }}
+    [web]
+    address = ":8080"
       {{- if .Values.dashboard.auth }}
       {{- if .Values.dashboard.auth.basic }}
       [web.auth.basic]
@@ -123,32 +90,17 @@ data:
       {{- end}}
       {{- end}}
     {{- end }}
-    {{- if .Values.metrics.prometheus.enabled }}
+    {{ if .Values.metrics.prometheus.enabled }}
     [web.metrics.prometheus]
-      {{- if .Values.metrics.prometheus.buckets }}
-      buckets = [
-        {{- range $idx, $element := .Values.metrics.prometheus.buckets }}
-            {{- if $idx }},{{ end }}
-            {{- printf "%.1f" $element }}
-        {{- end -}}
-        ]
-        {{- end -}}
+      Buckets = {{ .Values.metrics.prometheus.buckets }}
     {{- end }}
-    {{- if .Values.metrics.datadog.enabled }}
+    {{ if .Values.metrics.datadog.enabled }}
     [web.metrics.datadog]
-      {{- if .Values.metrics.datadog.address }}
-      address = {{ .Values.metrics.datadog.address | quote }}
-      {{- end}}
-      {{- if .Values.metrics.datadog.pushinterval }}
-      pushinterval = {{ .Values.metrics.datadog.pushinterval | quote }}
-      {{- end}}
+      Address = {{ .Values.metrics.datadog.address }}
+      PushInterval = "{{ .Values.metrics.datadog.pushInterval }}"
     {{- end }}
-    {{- if .Values.metrics.statsd.enabled }}
+    {{ if .Values.metrics.statsd.enabled }}
     [web.metrics.statsd]
-      {{- if .Values.metrics.statsd.address }}
-      address = {{ .Values.metrics.statsd.address | quote }}
-      {{- end}}
-      {{- if .Values.metrics.statsd.pushinterval }}
-      pushinterval = {{ .Values.metrics.statsd.pushinterval | quote }}
-      {{- end}}
+      Address = {{ .Values.metrics.statsd.address }}
+      PushInterval = "{{ .Values.metrics.statsd.pushInterval }}"
     {{- end }}
