--- a/charts/generic/traefik/templates/dashboard-service.yaml
+++ b/charts/generic/traefik/templates/dashboard-service.yaml
@@ -2,22 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "traefik.fullname" . }}-dashboard
+  name: {{ template "fullname" . }}-dashboard
   labels:
-    app: {{ template "traefik.name" . }}
+    app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-  annotations:
-  {{- if .Values.dashboard.service }}
-  {{- range $key, $value := .Values.dashboard.service.annotations }}
-    {{ $key }}: {{ $value | quote }}
-  {{- end }}
-  {{- end }}
 spec:
   selector:
-    app: {{ template "traefik.name" . }}
-    release: {{ .Release.Name }}
+    app: {{ template "fullname" . }}
   ports:
   - port: 80
     targetPort: 8080
