--- a/charts/generic/traefik/templates/default-cert-secret.yaml
+++ b/charts/generic/traefik/templates/default-cert-secret.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "traefik.fullname" . }}-default-cert
+  name: {{ template "fullname" . }}-default-cert
   labels:
-    app: {{ template "traefik.name" . }}
+    app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
