--- a/charts/generic/traefik/templates/deployment.yaml
+++ b/charts/generic/traefik/templates/deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
-    app: {{ template "traefik.name" . }}
+    app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -11,26 +11,21 @@ spec:
   replicas: {{ default 1 .Values.replicas }}
   selector:
     matchLabels:
-      app: {{ template "traefik.name" . }}
-      release: {{ .Release.Name }}
+      app: {{ template "fullname" . }}
   template:
     metadata:
-      annotations:
-        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       {{- if and (.Values.tolerations) (le .Capabilities.KubeVersion.Minor "5") }}
+      annotations:
         scheduler.alpha.kubernetes.io/tolerations: '{{ toJson .Values.tolerations }}'
       {{- end }}
-      {{- range $key, $value := .Values.deployment.podAnnotations }}
-        {{ $key }}: {{ $value | quote }}
-      {{- end }}
       labels:
-        app: {{ template "traefik.name" . }}
+        app: {{ template "fullname" . }}
         chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
         release: "{{ .Release.Name }}"
         heritage: "{{ .Release.Service }}"
     spec:
       {{- if .Values.rbac.enabled }}
-      serviceAccountName: {{ template "traefik.fullname" . }}
+      serviceAccountName: {{ template "fullname" . }}
       {{- else }}
       serviceAccountName: default
       {{- end }}
@@ -39,13 +34,9 @@ spec:
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
       {{- end }}
-      {{- if .Values.affinity }}
-      affinity:
-{{ toYaml .Values.affinity | indent 8 }}
-      {{- end }}
       containers:
       - image: {{ .Values.image }}:{{ .Values.imageTag }}
-        name: {{ template "traefik.fullname" . }}
+        name: {{ template "fullname" . }}
         resources:
           requests:
             cpu: "{{ .Values.cpuRequest }}"
@@ -69,16 +60,6 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 2
-        {{- if and .Values.acme.enabled (eq .Values.acme.challengeType "dns-01") .Values.acme.dnsProvider.name }}
-        env:
-        {{- range $k, $_ := (index .Values.acme.dnsProvider .Values.acme.dnsProvider.name) }}
-          - name: {{ $k }}
-            valueFrom:
-              secretKeyRef:
-                name: {{ template "traefik.fullname" $ }}-dnsprovider-config
-                key: {{ $k }}
-        {{- end }}
-        {{- end }}
         volumeMounts:
         - mountPath: /config
           name: config
@@ -91,45 +72,27 @@ spec:
           name: acme
         {{- end }}
         ports:
-        - name: http
-          containerPort: 80
-          {{- if .Values.deployment.hostPort.httpEnabled }}
-          hostPort: 80
-          {{- end }}
-          protocol: TCP
-        - name: httpn
-          containerPort: 8880
-          protocol: TCP
-        - name: https
-          containerPort: 443
-          {{- if .Values.deployment.hostPort.httpsEnabled }}
-          hostPort: 443
-          {{- end }}
-          protocol: TCP
+        - containerPort: 80
+        - containerPort: 443
         {{- if .Values.dashboard.enabled }}
-        - name: dash
-          containerPort: 8080
-          {{- if .Values.deployment.hostPort.dashboardEnabled }}
-          hostPort: 8080
-          {{- end }}
-          protocol: TCP
+        - containerPort: 8080
         {{- end }}
         args:
         - --configfile=/config/traefik.toml
       volumes:
       - name: config
         configMap:
-          name: {{ template "traefik.fullname" . }}
+          name: {{ template "fullname" . }}
       {{- if .Values.ssl.enabled }}
       - name: ssl
         secret:
-          secretName: {{ template "traefik.fullname" . }}-default-cert
+          secretName: {{ template "fullname" . }}-default-cert
       {{- end }}
       {{- if .Values.acme.enabled }}
       - name: acme
       {{- if .Values.acme.persistence.enabled }}
         persistentVolumeClaim:
-          claimName: {{ .Values.acme.persistence.existingClaim | default (printf "%s-acme" (include "traefik.fullname" .)) }}
+          claimName: {{ template "fullname" . }}-acme
       {{- else }}
         emptyDir: {}
       {{- end }}
