--- a/charts/generic/traefik/templates/rbac.yaml
+++ b/charts/generic/traefik/templates/rbac.yaml
@@ -2,12 +2,12 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
 rules:
   - apiGroups:
       - ""
@@ -32,13 +32,13 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
 subjects:
 - kind: ServiceAccount
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
   namespace: {{ .Release.Namespace }}
 {{- end }}
