--- a/charts/generic/traefik/templates/service.yaml
+++ b/charts/generic/traefik/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "traefik.fullname" . }}
+  name: {{ template "fullname" . }}
   labels:
-    app: {{ template "traefik.name" . }}
+    app: {{ template "fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -29,29 +29,17 @@ spec:
     - {{ $cidr }}
     {{- end }}
   {{- end }}
-  {{- if .Values.externalTrafficPolicy }}
-  externalTrafficPolicy: {{ .Values.externalTrafficPolicy }}
-  {{- end }}
   selector:
-    app: {{ template "traefik.name" . }}
-    release: {{ .Release.Name }}     
+    app: {{ template "fullname" . }}
   ports:
   - port: 80
     name: http
-    {{- if (and (eq .Values.serviceType "NodePort") (not (empty .Values.service.nodePorts.http)))}}
-    nodePort: {{ .Values.service.nodePorts.http }}
-    {{- end }}
-    targetPort: http
   - port: 443
     name: https
-    {{- if (and (eq .Values.serviceType "NodePort") (not (empty .Values.service.nodePorts.https)))}}
-    nodePort: {{ .Values.service.nodePorts.https }}
-    {{- end }}
     {{- if not .Values.ssl.enabled }}
-    targetPort: httpn
+    targetPort: 80
     {{- end }}
   {{- if or .Values.metrics.prometheus.enabled .Values.metrics.datadog.enabled .Values.metrics.statsd.enabled }}
   - port: 8080
     name: metrics
-    targetPort: dash
   {{- end }}
