--- a/charts/generic/ingress/templates/ingress.yaml
+++ b/charts/generic/ingress/templates/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "fullname" . }}
+  namespace: {{ default "default" .Values.namespace }}
   labels:
     app: {{ template "name" . }}
   annotations:
