--- a/charts/generic/ingress/values.yaml
+++ b/charts/generic/ingress/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 entity:
   name: ""
+namespace: ""
 ingress:
   # Used to create an Ingress record.
   hosts: ""
