--- a/charts/app/hello-ingress-nginx/ingress.yaml
+++ b/charts/app/hello-ingress-nginx/ingress.yaml
@@ -1,8 +1,11 @@
 ingress:
   annotations:
-    nginx.ingress.kubernetes.io/auth-type: basic
-    nginx.ingress.kubernetes.io/auth-secret: basic-auth
-    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
+#    nginx.ingress.kubernetes.io/auth-type: basic
+#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
+#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - foo"
+    nginx.ingress.kubernetes.io/limit-connections: "10"
+    nginx.ingress.kubernetes.io/limit-rps: "10"
+#    nginx.ingress.kubernetes.io/limit-rpm: "1"
   rules:
   - host: bailantaotao.example.com
     http:
